tests/snapshots/examples_fixtures/type_system__failing__104_missing_colon_effect_op.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/104_missing_colon_effect_op.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Effect Operation Colon

Missing `:` in effect operation signature. Write it as `op: Type -> Return`.

  examples/type_system/failing/104_missing_colon_effect_op.flx:2:11
  |
2 |     print String -> Unit
  |           ^^^^^^

Note:
  while parsing effect `Console`
== stdout ==
<not executed>
